--- a/style.css
+++ b/style.css
@@ -4,9 +4,14 @@ body{
 	
 	font-family: "Roboto", sans-serif;
 	text-align: center; 
-	    background-image: url(images/jj.jpg);
-	    background-size: cover
+}
 
+video#bgvid {
+  position: fixed; right: 0; bottom: 0;
+  min-width: 100%; min-height: 100%;
+  width: auto; height: auto; z-index: -100;
+  background: url(polina.jpg) no-repeat;
+  background-size: cover;
 }
 
 h1{
@@ -32,7 +37,7 @@ div{
 	background-color:white;
 	border: solid 1px white ; 
 	border-radius : 8px;
-	box-shadow: 3px 3px 3px #d4c9d5;
+	box-shadow: 3px 3px 3px lightgrey;
 }
 .button-blue{
 	background-color: lightslategrey;
@@ -58,7 +63,7 @@ i{
 	margin: 0 15px;
 }
 i:hover{
-	color: lightpink;
+	color: lightblue;
 	transition: 0.5s;
 }
 
